# whisper.cpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/whisper.wasm/: CMakeLists.txt  index-tmpl.html
